--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,12 @@
   "install": {
     "path": "/ui/app/vendor",
     "ignore": [
-      "jquery"
+      "jquery",
+      "desandro-matches-selector",
+      "fizzy-ui-utils",
+      "get-size",
+      "masonry",
+      "outlayer"
     ],
     "sources": {
       "slick-carousel": [
@@ -19,6 +24,9 @@
       "parsleyjs": [
         "bower_components/parsleyjs/dist/parsley.js",
         "bower_components/parsleyjs/dist/parsley.js.map"
+      ],
+      "isotope": [
+        "bower_components/isotope/dist/isotope.pkgd.min.js"
       ]
     }
   },
@@ -27,6 +35,8 @@
     "slick-carousel": "1.6.0",
     "parsleyjs": "2.4.4",
     "selectron": "jquery-selectron#2.0.2",
-    "sharetastic": "jquery-sharetastic#1.3.3"
+    "sharetastic": "jquery-sharetastic#1.3.3",
+    "isotope": "3.0.1",
+    "imagesloaded": "4.1.1"
   }
 }
